fixed get events